test/testcase/err1.sy
#include <stdio.h>

const int i_c; // error: conflicting type qualifiers for ‘a’

int main()
{
    printf("Hello world\n\b");
    return 0;
}

